# facility-manager

./: Procfile  README.md  manage.py  nixpacks.toml  pyproject.toml  railway.json  start.sh  start_celery.sh  template.env  template.env.production
accounts/: admin.py  forms.py  inlines.py  managers.py  mixins.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
accounts/management/: create_default_admin.py
accounts/migrations/: 0001_initial.py  0002_user_email_verified.py
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
assets/: admin.py  choices.py  forms.py  menu.py  models.py  urls.py  views.py
assets/migrations/: 0001_initial.py  0002_alter_asset_options_remove_asset_category_and_more.py
common/: admin.py  apps.py  inlines.py  menu_registry.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py
common/templatetags/: menu_tags.py
facilities/: admin.py  forms.py  menu.py  models.py  tests.py  urls.py  views.py
facilities/migrations/: 0001_initial.py
facility_manager/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
facility_manager/settings/: base.py  dev.py  prod.py
inventory/: admin.py  choices.py  forms.py  inlines.py  menu.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_sparepart_work_orders_alter_stockmovement_part_and_more.py
maintenance/: admin.py  choices.py  forms.py  inlines.py  menu.py  models.py  tasks.py  tests.py  urls.py  views.py
postman/: FacilityManager.postman_collection.json
templates/: 404.html  500.html  base.html
(+67 files in other folders)
