[project]
name = "facility-manager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.83",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "django>=6.0.3",
    "django-celery-results>=2.6.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "gunicorn>=25.3.0",
    "pillow>=12.1.1",
    "psycopg>=3.3.3",
    "redis>=7.4.0",
    "whitenoise>=6.12.0",
]
